Project1/ingress-TLS.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: my-namespace
spec:
  tls: 
  - host: 
    - myapp.com
    secretName: myapp-secret-tls  #reference secret file
  rules:
  - host: app.com
    http:
      paths:
      - path:
        backend:
          serviceName: app-service
          servicePort: 80
