Project1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: my-namespace
spec:
  rules:
  - host: app.com
    http:
      paths:
      - backend:
          serviceName: app-service
          servicePort: 80
